[gd_scene load_steps=44 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Game/SFX/BrooklynSound 1.wav" type="AudioStream" id=2]
[ext_resource path="res://Game/p1.gd" type="Script" id=3]
[ext_resource path="res://Game/Fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Game/GFX/Character/Pig_Head.png" type="Texture" id=5]
[ext_resource path="res://Game/GFX/Character/Pig_a1.png" type="Texture" id=6]
[ext_resource path="res://Game/GFX/Character/Pig_a2.png" type="Texture" id=7]
[ext_resource path="res://Game/GFX/Character/Pig_a3.png" type="Texture" id=8]
[ext_resource path="res://Game/GFX/Character/Pig_b3.png" type="Texture" id=9]
[ext_resource path="res://Game/GFX/Character/Pig_b1.png" type="Texture" id=10]
[ext_resource path="res://Game/GFX/Character/Pig_b2.png" type="Texture" id=11]
[ext_resource path="res://Game/GFX/Character/Dog_head.png" type="Texture" id=12]
[ext_resource path="res://Game/GFX/Character/Penguin_head.png" type="Texture" id=13]
[ext_resource path="res://Game/GFX/Character/Dog_a1.png" type="Texture" id=14]
[ext_resource path="res://Game/GFX/Character/Dog_a3.png" type="Texture" id=15]
[ext_resource path="res://Game/GFX/Character/Horse_head.png" type="Texture" id=16]
[ext_resource path="res://Game/GFX/Character/Dog_a2.png" type="Texture" id=17]
[ext_resource path="res://Game/GFX/Character/Penguin_a3.png" type="Texture" id=18]
[ext_resource path="res://Game/GFX/Character/Dog_b2.png" type="Texture" id=19]
[ext_resource path="res://Game/GFX/Character/Penguin_b1.png" type="Texture" id=20]
[ext_resource path="res://Game/GFX/Character/Dog_b1.png" type="Texture" id=21]
[ext_resource path="res://Game/GFX/Character/Penguin_a1.png" type="Texture" id=22]
[ext_resource path="res://Game/GFX/Character/Penguin_b2.png" type="Texture" id=23]
[ext_resource path="res://Game/GFX/Character/Dog_b3.png" type="Texture" id=24]
[ext_resource path="res://Game/GFX/Character/Penguin_b3.png" type="Texture" id=25]
[ext_resource path="res://Game/GFX/Character/Penguin_a2.png" type="Texture" id=26]
[ext_resource path="res://Game/GFX/Character/Horse_b3.png" type="Texture" id=27]
[ext_resource path="res://Game/GFX/Character/Horse_a2.png" type="Texture" id=28]
[ext_resource path="res://Game/GFX/Character/Horse_b1.png" type="Texture" id=29]
[ext_resource path="res://Game/GFX/Character/Horse_a1.png" type="Texture" id=30]
[ext_resource path="res://Game/GFX/Character/Horse_a3.png" type="Texture" id=31]
[ext_resource path="res://Game/GFX/Character/Horse_b2.png" type="Texture" id=32]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.10449, 201.096 )

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 130.65, -0.25, 0, 0.25, 0, 130.65, -0.25, 0, 0.25, 0, 130.65, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 111.739, -0.25, 0, 0.25, 0, 244.389, -0.25, 0, 0.25, 0, 111.739, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=3]
size = 42
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 31 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 32 ), ExtResource( 27 ), ExtResource( 27 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 24 ), ExtResource( 24 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 25 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="p1_root" type="Node2D"]
script = ExtResource( 3 )

[node name="p1" type="Sprite" parent="."]

[node name="Area2D2" type="KinematicBody2D" parent="p1"]
position = Vector2( 0, 136.009 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="p1/Area2D2"]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="p1"]
anims/hit = SubResource( 2 )

[node name="r" type="Sprite" parent="p1"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 203.772, 115.635 )
scale = Vector2( 0.377654, 0.377654 )
texture = ExtResource( 1 )
offset = Vector2( -648.625, -176.658 )

[node name="g" type="Sprite" parent="p1"]
visible = false
modulate = Color( 0.32549, 1, 0, 1 )
position = Vector2( 240.406, 116.013 )
scale = Vector2( 0.377654, 0.377654 )
texture = ExtResource( 1 )
offset = Vector2( -648.625, -176.658 )

[node name="b" type="Sprite" parent="p1"]
visible = false
modulate = Color( 0, 0.333333, 1, 1 )
position = Vector2( 275.907, 117.146 )
scale = Vector2( 0.377654, 0.377654 )
texture = ExtResource( 1 )
offset = Vector2( -648.625, -176.658 )

[node name="a" type="Sprite" parent="p1"]
visible = false
modulate = Color( 1, 0.0980392, 0.952941, 1 )
position = Vector2( 310.766, 117.156 )
scale = Vector2( 0.377654, 0.377654 )
texture = ExtResource( 1 )
offset = Vector2( -648.625, -176.658 )

[node name="s1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Effects"

[node name="s2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Effects"

[node name="Name" type="Label" parent="."]
visible = false
margin_left = -89.6184
margin_top = -309.416
margin_right = 99.3816
margin_bottom = -251.416
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "My Namehjjjjjj"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateACInfo" type="Timer" parent="."]
wait_time = 0.3

[node name="AiDisableTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Pig_Head" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Horse_Head" type="Sprite" parent="."]
visible = false
texture = ExtResource( 16 )

[node name="Dog_Head" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )

[node name="Penguin_Head" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )

[node name="PigA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )

[node name="PigB" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )

[node name="HorseA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )

[node name="HorseB" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 7 )

[node name="DogA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 8 )

[node name="DogB" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 9 )

[node name="PenguinA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 10 )

[node name="PenguinB" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 11 )
[connection signal="timeout" from="UpdateACInfo" to="." method="_on_UpdateACInfo_timeout"]
[connection signal="timeout" from="AiDisableTimer" to="." method="_on_AiDisableTimer_timeout"]
